fix: header out of container fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -90,7 +90,7 @@ header{
 }
 
 
-@media (min-width: 975px) {
+@media (min-width: 1100px) {
 
     header{
         border: none;
